src/snapshots/ruff__linter__tests__E402_E402.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  """Top-level docstring."""
  
  __all__ = ["y"]
  __version__: str = "0.1.0"
  
  import a
  
  try:
      import b
  except ImportError:
      pass
  else:
      pass
  
  import c
  
  if x > 0:
      import d
  else:
      import e
  
  y = x + 1
  
| import f
|> Module level import not at top of file
  
  
  def foo() -> None:
      import e
  
  
  if __name__ == "__main__":
      import g

