src/snapshots/ruff__linter__tests__E501_E501.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    LineTooLong:
      - 123
      - 88
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 123
  fix: ~
- kind:
    LineTooLong:
      - 127
      - 88
  location:
    row: 25
    column: 0
  end_location:
    row: 25
    column: 127
  fix: ~

