src/snapshots/ruff__linter__tests__E501_E501.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  """Lorem ipsum dolor sit amet.
  
      https://github.com/PyCQA/pycodestyle/pull/258/files#diff-841c622497a8033d10152bfdfb15b20b92437ecdea21a260944ea86b77b51533
  
| Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
|> Line too long (123 > 88 characters)
  """
  
  _ = """Lorem ipsum dolor sit amet.
  
      https://github.com/PyCQA/pycodestyle/pull/258/files#diff-841c622497a8033d10152bfdfb15b20b92437ecdea21a260944ea86b77b51533
  
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  """  # noqa: E501
  
  _ = "---------------------------------------------------------------------------AAAAAAA"
  _ = "---------------------------------------------------------------------------亜亜亜亜亜亜亜"
  
  
  def caller(string: str) -> None:
      assert string is not None
  
  
  caller(
      """
|     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
|> Line too long (127 > 88 characters)
      """,
  )
  
  
  caller(
      """
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      """,  # noqa: E501
  )
  
  multiple_strings_per_line = {
      # OK
      "Lorem ipsum dolor": "sit amet",
      # E501 Line too long
|     "Lorem ipsum dolor": "sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
|> Line too long (132 > 88 characters)
      # E501 Line too long
      "Lorem ipsum dolor": """
| sit amet  consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
|> Line too long (105 > 88 characters)
  """,
      # OK
      "Lorem ipsum dolor": "sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",  # noqa: E501
      # OK
      "Lorem ipsum dolor": """
  sit amet  consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  """,  # noqa: E501
  }

