src/snapshots/ruff__linter__tests__E711_E711.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    NoneComparison: Eq
  location:
    row: 2
    column: 10
  end_location:
    row: 2
    column: 14
  fix:
    patch:
      content: res is None
      location:
        row: 2
        column: 3
      end_location:
        row: 2
        column: 14
- kind:
    NoneComparison: NotEq
  location:
    row: 5
    column: 10
  end_location:
    row: 5
    column: 14
  fix:
    patch:
      content: res is not None
      location:
        row: 5
        column: 3
      end_location:
        row: 5
        column: 14
- kind:
    NoneComparison: Eq
  location:
    row: 8
    column: 3
  end_location:
    row: 8
    column: 7
  fix:
    patch:
      content: None is res
      location:
        row: 8
        column: 3
      end_location:
        row: 8
        column: 14
- kind:
    NoneComparison: NotEq
  location:
    row: 11
    column: 3
  end_location:
    row: 11
    column: 7
  fix:
    patch:
      content: None is not res
      location:
        row: 11
        column: 3
      end_location:
        row: 11
        column: 14
- kind:
    NoneComparison: Eq
  location:
    row: 14
    column: 13
  end_location:
    row: 14
    column: 17
  fix:
    patch:
      content: "res[1] is None"
      location:
        row: 14
        column: 3
      end_location:
        row: 14
        column: 17
- kind:
    NoneComparison: NotEq
  location:
    row: 17
    column: 13
  end_location:
    row: 17
    column: 17
  fix:
    patch:
      content: "res[1] is not None"
      location:
        row: 17
        column: 3
      end_location:
        row: 17
        column: 17
- kind:
    NoneComparison: NotEq
  location:
    row: 20
    column: 3
  end_location:
    row: 20
    column: 7
  fix:
    patch:
      content: "None is not res[1]"
      location:
        row: 20
        column: 3
      end_location:
        row: 20
        column: 17
- kind:
    NoneComparison: Eq
  location:
    row: 23
    column: 3
  end_location:
    row: 23
    column: 7
  fix:
    patch:
      content: "None is res[1]"
      location:
        row: 23
        column: 3
      end_location:
        row: 23
        column: 17
- kind:
    NoneComparison: Eq
  location:
    row: 26
    column: 8
  end_location:
    row: 26
    column: 12
  fix:
    patch:
      content: ""
      location:
        row: 26
        column: 3
      end_location:
        row: 26
        column: 3
- kind:
    NoneComparison: NotEq
  location:
    row: 26
    column: 16
  end_location:
    row: 26
    column: 20
  fix:
    patch:
      content: x is None is not None
      location:
        row: 26
        column: 3
      end_location:
        row: 26
        column: 20

