src/snapshots/ruff__linter__tests__E713_E713.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: NotInTest
  location:
    row: 2
    column: 7
  end_location:
    row: 2
    column: 13
  fix: ~
- kind: NotInTest
  location:
    row: 5
    column: 7
  end_location:
    row: 5
    column: 15
  fix: ~
- kind: NotInTest
  location:
    row: 8
    column: 7
  end_location:
    row: 8
    column: 13
  fix: ~
- kind: NotInTest
  location:
    row: 11
    column: 22
  end_location:
    row: 11
    column: 28
  fix: ~
- kind: NotInTest
  location:
    row: 14
    column: 8
  end_location:
    row: 14
    column: 14
  fix: ~

