src/snapshots/ruff__linter__tests__E713_E713.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  #: E713
| if not X in Y:
|> Test for membership should be `not in`
      pass
  #: E713
| if not X.B in Y:
|> Test for membership should be `not in`
      pass
  #: E713
| if not X in Y and Z == "zero":
|> Test for membership should be `not in`
      pass
  #: E713
| if X == "zero" or not Y in Z:
|> Test for membership should be `not in`
      pass
  #: E713
| if not (X in Y):
|> Test for membership should be `not in`
      pass
  
  #: Okay
  if x not in y:
      pass
  
  if not (X in Y or X is Z):
      pass
  
  if x is not y:
      pass
  
  if X is not Y is not Z:
      pass
  
  if TrueElement.get_element(True) == TrueElement.get_element(False):
      pass
  
  if (True) == TrueElement or x == TrueElement:
      pass
  
  assert (not foo) in bar
  assert {"x": not foo} in bar
  assert [42, not foo] in bar

